css/styles.css
body, html {
    padding: 0;
    margin: 0;
    font-family: Arial, Verdana, sans-serif;
    height: 100%;
}

header {
    text-align: center;
}

footer {
    text-align: center;
    font-style: normal;
    /*background-color: grey;*/
    border-top: 3px solid green;
    margin: 0 14rem;
    padding: 5px 0;
}

h1{
    font-family: Bookman, sans-serif;
    font-size: 36pt;
    font-weight: bold;
    margin-bottom: 0;
    margin-top: 10px;
}

h2{
    color: green;
    font-size: 2em;
}

a {
    color: #7A7C80;
    text-decoration: none;
}

ul {
  font-size: 1.2rem;
  list-style-type: none;
}

li {
  /*line-height: 2;*/
  margin: 15px 0;
}

ul li {
  padding-left: 2rem;
  background-image: url(../images/spoon.png);
  background-position: 0 0;
  background-size: 1.6rem 1.6rem;
  background-repeat: no-repeat;
}

ul a:hover {
  background-color: #eee;
  color: green;
  transition: 0.3s;
}

#topline {
    padding-bottom: 20px;
}

#topline a:hover {
  color: green;
  transition: 0.3s;
}

/*The "splash" title page*/
.splash {
    color: #fff;
    background-image: url("../images/test-cover.jpg");
    height: 90%;
    background-size: cover;
    padding: 4rem 2rem;
    text-align: center;
}

.splash-nav {
    display: inline-block;
}

.splash-text {
    padding: 20% 0;
}

.splash-nav a {
  font-size: 1.2em;
  color: #fff;
  display: inline-block;
  text-align: center;
  padding: 20px 10px;
  text-decoration: none;
}

.splash-nav a:hover {
  background-color: #eee;
  color: green;
  transition: 0.3s;
}

.sub-title {
    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
    font-style: italic;
}

#about {
    /*background-color: grey;*/
    color: #7A7C80;
    text-align: left;
    font-size: 14pt;
    height: auto;
    margin: 0 14rem;
    padding-bottom: 20px;
    border-bottom: 3px solid green;
    /*overflow: hidden;*/
}

#about img {
    float: right;
    margin-left: 20px;
    height: 100%;
    width: 40%;
    filter: sepia(50%);
    object-fit: contain;
}

#about p {
    margin-right: 50%;
}

.quote-block {
    font-size: 32pt;
}

#testimonials {
    /*background-color: grey;*/
    color: #7A7C80;
    text-align: left;
    font-size: 14pt;
    height: auto;
    margin: 0 14rem;
    padding: 20px 0;
    border-top: 3px solid green;
}

#testimonials p {
    margin: 2rem 4rem;
    line-height: 1.4em;
}

.pg-title {
    color: #7A7C80;
    text-align: center;
    font-size: 14pt;
    height: auto;
    margin: 0 14rem;
    padding: 0 0 35px 0;
}

.article-list {
    /*background-color: grey;*/
    /*margin: 0 14rem;*/
    padding: 0 20rem;
    /*padding-bottom: 20px;*/
}

.article-list article {
    background-color: #eee;
    margin: 0 0 20px 0;
    overflow: hidden;
}

.article-list article img {
    float: left;
    height: 150px;
    width: 180px;
    object-fit: contain;
    margin-right: 20px;
}

.ways {
    /*background-color: grey;*/
    margin: 0 36% 50px 36%;
    /*text-align: center;*/
}

 /*article-page 1*/
.organisation {
    float: right;
    width: 35%;
    padding-top: 20vh;
    text-align: center;
    height: 100vh;
}

.top-nav {
  /*background-color: grey;*/
  overflow: hidden;
  margin: 0 14rem;
  border-style: solid;
  border-color: green;
  border-width: 3px 0;
}

.top-nav a {
  /*float: left;*/
  display: inline-block;
  text-align: center;
  padding: 20px 10px;
  text-decoration: none;
}

.top-nav a:hover {
  background-color: #eee;
  color: green;
  transition: 0.3s;
}

.grid-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  padding: 2rem 10rem;
  grid-gap: 1rem;
}

.grid-item {
    padding: 0 20px 10px 20px;
    background-color: #eee;
}

.grid-item img {
    height: 220px;
    width: 100%;
    object-fit: contain;
}

/*Set the fonts for inside each article box*/
.article-title {
    font-family: Tahoma, Geneva, sans-serif;
    font-size: 18pt;
    font-style: bolder;
}

article a {
    font-size: 1em;
    color: black
}

article a:hover {
  background-color: #fff;
  color: green;
  transition: 0.3s;
}

.pub-title {
    color: #545454;
    margin-top: 10px;
    margin-bottom: 10px;
    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
    font-size: 16pt;
    font-style: italic;
    font-weight: lighter;
}

